fix : collect() 대신 바로 toList() 사용하게 변경